# hydro-auto-od

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  app.py  auto_od.py  func_main.py  grpc_app.py  hydro-auto-od-openapi.yaml  jenkinsfile.groovy  jenkinsfile.old.groovy  pyproject.toml  request_simulator.py  requirements.txt  tabular_od_methods.py  utils.py  version.json
.github/: dependabot.yaml
.github/workflows/: ci.yaml  docker-ci.yaml  release.yaml
app/: app.py  auto_od_methods.py  config.py  emmv.py  emmv_selection.py  grpc_app.py  main.py  selection.py  server.py  tabular_od_methods.py  training_status_storage.py  tuning.py  utils.py
app/resources/monitoring_model_template/: requirements.txt
app/resources/monitoring_model_template/src/: func_main.py
hydro_auto_od/: config.py  main.py  selection.py  server.py  tabular_od_methods.py  training_status_storage.py  tuning.py
hydro_auto_od/resources/monitoring_model_template/: requirements.txt
hydro_auto_od/resources/monitoring_model_template/src/: func_main.py
monitoring_model_template/: func_main.py  requirements.txt
monitoring_model_template/src/: func_main.py
schemas/: auto_metric.json
