[tool.poetry]
name = "hydro_auto_od"
version = "3.0.0"
description = "Service is responsible for creating monitoring metrics for deployed machine learning models via unsuperviesd AutoML techniques"
authors = ["hydrosphere.io"]

[tool.poetry.dependencies]
python = "^3.8"
hydrosdk = "3.0.0"
pymongo="~3.8.0"
joblib="~0.14.1"
pandas="1.1.5"
numpy="1.18.3"
pyod="0.8.5"
grpcio-health-checking="~1.28.1"
gitpython="~2.1"
s3fs="~0.4.2"
sseclient-py="1.7"
requests="2.23.0"
typing="~3.7.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
